--- a/server/model-config.json
+++ b/server/model-config.json
@@ -24,5 +24,9 @@
   "isoresponsetracking": {
     "dataSource": "psql",
     "public": true
+  },
+  "casetracking": {
+    "dataSource": "psql",
+    "public": false
   }
 }
