Added IQ Tracking

--- a/server/model-config.json
+++ b/server/model-config.json
@@ -28,5 +28,9 @@
   "casetracking": {
     "dataSource": "psql",
     "public": true
+  },
+  "iqtracking": {
+    "dataSource": "psql",
+    "public": true
   }
 }
