Added more fields

--- a/common/models/launchpoint-case.json
+++ b/common/models/launchpoint-case.json
@@ -46,6 +46,15 @@
     },
     "CloseReason": {
       "type": "string"
+    },
+    "State": {
+      "type": "string"
+    },
+    "EnvironmentId": {
+      "type": "string"
+    },
+    "CaseSource": {
+      "type": "string"
     }
   },
   "validations": [],
